fix photo content loading for json and footer collapse issue

--- a/css/style.css
+++ b/css/style.css
@@ -1462,7 +1462,7 @@ a.button.dark:hover {
 }
 
 .portfolio-item:hover img {
-    transform: scale(1.02);
+    transform: scale(1.03);
 }
 
 .portfolio-overlay .portfolio-text-content {
